# LLM_zoomcamp

./: .gitignore  README.md  hello.py  pyproject.toml
Intro/: notebook.ipynb  persistant_rag.ipynb  persistant_rag_ingest.ipynb  rag_helper.py  rag_ingest.ipynb
Intro/agents/: agent.ipynb
Vector Search/: rag_helper.py  vector_search.ipynb  vector_search_persistant.ipynb
