[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.0",
    "minsearch>=0.0.11",
    "openai>=2.36.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.2",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
]
